--- a/index.html
+++ b/index.html
@@ -34,7 +34,25 @@
     </header>
     <!-- slider -->
     <section class="slider">
-        
+        <div class="container">
+            <div class="info">
+                <h1>
+                    Solar Panel Installers In Plymouth
+                </h1>
+                <p>
+                    Fueled is an award-winning technology consultancy that transforms businesses by generating ideas, building products, and accelerating growth.
+                </p>
+                <div class="contactbutton">
+                    <button>Call Us Today</button>
+                    <button>Requst a call back</button>
+                </div>
+                <ul class="">
+                    <li class="active"></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+        </div>
     </section>
 </body>
 </html>
