--- a/index.html
+++ b/index.html
@@ -54,6 +54,101 @@
             </div>
         </div>
     </section>
+    <!-- about -->
+    <section class="about">
+        <div class="container">
+            <div class="description">
+                <h1>
+                    The Friendliest Installers in the South-West
+                </h1>
+                <p>
+                    At Solidarity Solar our aims are to help our customers towards a sustainable future and genuinely care about the quality of products we use for our installs. We never sell you equipment you don't need and will always advise to the best of our ability, No hard sell or pushy sales tactics ever. We take pride in our work and do our best to make sure that we meet, or exceed, our customers' expectations.
+                </p>
+                <ol>
+                    <li>Collaborate with 100+ leading</li>
+                    <li>100+ leading universities and companies</li>
+                    <li>leading universities and companies</li>
+                    <li> universities and companies</li>
+                </ol>
+            </div>
+            <div class="images">
+                <img src="./images/Rectangle 30.png">
+                <div class="card">
+                    <i class="fa-solid fa-solar-panel" style="color: #2A3334;"></i>
+                    <p>
+                        The Piece That Sold Me On This Polarizing Trend
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- contactus -->
+    <section class="contact">
+        <div class="container">
+            <h1>
+                Power that Doesn't Cost the Earth
+            </h1>
+            <p>
+                If you need advice then give us a call on 07745593882 or hit the button below to request a call back!
+            </p>
+            <button>Call Us Today</button>
+        </div>
+    </section>
+    <!-- Solar kits -->
+    <section class="solarkits">
+        <div class="container">
+            <h1>Solar Kits</h1>
+            <p>Complete solar system kits, ready for installation. They can be used to supplement on-grid housing, a complete self-sustaining home or some combination of the two.</p>
+            <div class="cards">
+                <div class="card">
+                    <figure>
+                        <img src="./images/solar-panels-meadow 2 (1).png" alt="">
+                        <figcaption>
+                            <h3>Off Grid</h3>
+                            <p>
+                                WOC has contributed to students so that they can work in their dream company, we will continue to stick to our commitment to create an advanced generation,
+                            </p>
+                            <button>
+                                View Products
+                                <i class="fa-solid fa-arrow-right"></i>
+                            </button>
+                        </figcaption>
+                    </figure>
+                </div>
+                <div class="card">
+                    <figure>
+                        <img src="./images/solar-panels-meadow 2 (2).png" alt="">
+                        <figcaption>
+                            <h3>On Grid</h3>
+                            <p>
+                                WOC has contributed to students so that they can work in their dream company, we will continue to stick to our commitment to create an advanced generation,
+                            </p>
+                            <button>
+                                View Products
+                                <i class="fa-solid fa-arrow-right"></i>
+                            </button>
+                        </figcaption>
+                    </figure>
+                </div>
+                <div class="card">
+                    <figure>
+                        <img src="./images/solar-panels-meadow 2 (3).png" alt="">
+                        <figcaption>
+                            <h3>Hybrid</h3>
+                            <p>
+                                WOC has contributed to students so that they can work in their dream company, we will continue to stick to our commitment to create an advanced generation,
+                            </p>
+                            <button>
+                                View Products
+                                <i class="fa-solid fa-arrow-right"></i>
+                            </button>
+                        </figcaption>
+                    </figure>
+                </div>
+            </div>
+        </div>
+    </section>
+    
     <script src="./script/script.js"></script> 
 </body>
 </html>
