--- a/index.html
+++ b/index.html
@@ -148,7 +148,21 @@
             </div>
         </div>
     </section>
-    
+    <!-- Replacement -->
+    <section class="replacement">
+        <div class="container">
+            <div class="layout">
+                <div class="blur"></div>
+                <h1>Repairs Over Replacement</h1>
+                <p>
+                    We approach every aspect of our business with sustainability in mind.
+                    That's why we believe it's always worth trying to fix a system before outright replacing it,
+                    wherever possible – it requires fewer materials and is easier on the planet,
+                    as well as your wallet! If another company tells you that your system needs to be replaced, just give us a call and we'll see if we can repair it first.
+                </p>
+            </div>
+        </div>
+    </section>
     <script src="./script/script.js"></script> 
 </body>
 </html>
