--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="images">
                 <img src="./images/Rectangle 30.png">
                 <div class="card">
-                    <i class="fa-solid fa-solar-panel" style="color: #2A3334;"></i>
+                    <img src="./images/Solar Charging.svg" alt="">
                     <p>
                         The Piece That Sold Me On This Polarizing Trend
                     </p>
@@ -160,6 +160,66 @@
                     wherever possible – it requires fewer materials and is easier on the planet,
                     as well as your wallet! If another company tells you that your system needs to be replaced, just give us a call and we'll see if we can repair it first.
                 </p>
+            </div>
+        </div>
+    </section>
+    <!-- products -->
+    <section class="products">
+        <div class="container">
+            <div class="info">
+                <div class="icon">
+                    <img src="./images/zap-fast.svg" alt="">
+                </div>
+                <h1>Energy Innovators - the products we love</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur. Suspendisse suspendisse tempor et ipsum sit egestas nunc. Diam in cum a in.
+                </p>
+            </div>
+            <div class="cards">
+                <div class="card">
+                    <img src="./images/product1.jpg" alt="">
+                    <h3>SoliTek - The European Manufacturer of Solar Panels</h3>
+                    <p>
+                        We work closely importing solar panels from Solitek, they offer 30 year warranties on their panels and are constantly coming up with new ideas - including their solar greenhouse.
+                    </p>
+                    <button>
+                        View integration
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                </div>
+                <div class="card">
+                    <img src="./images/product2.avif" alt="">
+                    <h3>Sunsynk - No Power No Problem</h3>
+                    <p>
+                        Sunsynk build the most versatile hybrid inverter on the market, designed to take up to 7kW of solar on a standard domestic supply - for simultaneous battery charging and household usage.
+                    </p>
+                    <button>
+                        View integration
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                </div>
+                <div class="card">
+                    <img src="./images/product3.jpg" alt="">
+                    <h3>BYD - Electrifying Transport</h3>
+                    <p>
+                        We use battery cells made by BYD, a market leader in lithium batteries. BYD batteries are in cars, trucks, and buses - they build robust batteries.
+                    </p>
+                    <button>
+                        View integration
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                </div>
+                <div class="card">
+                    <img src="./images/product4.jpg" alt="">
+                    <h3>REC - Solar's Most Trusted</h3>
+                    <p>
+                        REC - Renewable Energy Corporation, are one of the longest trading names in solar. They know how to be truly sustainable in this industry - their panels are 100% lead free and have the most trusted warranty in solar.
+                    </p>
+                    <button>
+                        View integration
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                </div>
             </div>
         </div>
     </section>
