--- a/index.html
+++ b/index.html
@@ -223,6 +223,40 @@
             </div>
         </div>
     </section>
+    <!-- values -->
+    <section class="values">
+        <div class="container">
+            <div class="info">
+                <h1>Our values</h1>
+                <p>
+                    More than 3000 users have been helped by World Online Course.
+                </p>
+            </div>
+            <div class="cards">
+                <div class="card">
+                    <img src="./images/Customer Care.svg" alt="">
+                    <h3>Customer Care</h3>
+                    <p>
+                        We're here to help you with solar panel installation in Devon and Cornwall. If we were to sum ourselves up in a few words, those would be "reliable, honest and friendly." We find our customers agree! We're with you from the start of the project to the finish.
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="./images/Price Tag.svg" alt="">
+                    <h3>Price</h3>
+                    <p>
+                        As I'm sure you'll have seen, solar systems don't tend to come cheap. Our aim is to make solar power accessible to everyone, so we price ourselves in a way that makes solar energy more affordable. We're focused on helping you and on helping the environment, rather than on turning a profit.
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="./images/Environment.svg" alt="">
+                    <h3>Sustainability</h3>
+                    <p>
+                        As we've said, we do this because we truly care about the planet and about seeing people embrace a greener, more eco-friendly approach to power. The world of green energy can be jargon-filled and opaque, so we want to help educate people on the big and little things they can do to protect our planet!
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="./script/script.js"></script> 
 </body>
 </html>
