--- a/index.html
+++ b/index.html
@@ -257,6 +257,48 @@
             </div>
         </div>
     </section>
+    <!-- feedback -->
+    <section class="feedback">
+        <div class="container">
+            <div class="info">
+                <img src="./images/comment.svg" alt="">
+                <h1>what they say about WOC</h1>
+                <p>
+                    More than 3000 users have been helped by World Online Course.
+                </p>
+            </div>
+            <div class="card">
+                <div class="header">
+                    <span>What they say</span>
+                    <ul>
+                        <li class="active"></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+                <div class="comment">
+                    <q>
+                        Studying at WOC is fun, the curriculum is complete, the instructors are competent, and the assignments given are also relevant to the current scope of work.
+                    </q>
+                </div>
+                <div class="user">
+                    <div class="userinfo">
+                        <img src="./images/EDITED-27 - Copy 1.png" alt="">
+                        <div class="info">
+                            <h4>Resky Fernanda</h4>
+                            <p>Product Designer at Tokopedia</p>
+                        </div>
+                    </div>
+                    <div class="chevron">
+                        <i class="fa-solid fa-chevron-left"></i>
+                        <i class="fa-solid fa-chevron-right"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="./script/script.js"></script> 
 </body>
 </html>
