--- a/index.html
+++ b/index.html
@@ -299,6 +299,36 @@
             </div>
         </div>
     </section>
+    <!-- footer -->
+    <footer>
+        <div class="container">
+            <img src="./images/Logo.svg" alt="">
+            <nav>
+                <ul>
+                    <li>About</li>
+                    <li>Careers</li>
+                    <li>Press</li>
+                    <li>Customer Care</li>
+                    <li>Services</li>
+                </ul>
+                <div class="subscription">
+                    <p>Get the freshest news from us</p>
+                    <input type="search" name="" placeholder="Your email address…">
+                    <button>Subscribe</button>
+                </div>
+            </nav>
+            <!-- policy -->
+            <div class="policy">
+                <ul>
+                    <li>Terms & Conditions</li>
+                    <li>Privacy Policy</li>
+                    <li>Accessibility</li>
+                    <li>Legal</li>
+                </ul>
+                <span>Copyright 2023 - Solidarity Solar Ltd</span>
+            </div>
+        </div>
+    </footer>
     <script src="./script/script.js"></script> 
 </body>
 </html>
